--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "convert-units": "^2.3.4",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-flexbox-grid": "^2.1.2",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.5",
-    "react-weathericons": "^1.0.4"
+    "react-weathericons": "^1.0.4",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
